新增分类接口
